src/components/Checkbox/Checkbox.module.scss
.checkbox {
	display: flex;
	justify-content: flex-end;
	align-items: center;
	gap: 8px;
	width: fit-content;
	font-size: 1rem;
	margin-top: var(--s-1);

	cursor: pointer;

	input {
		display: none;
	}

	input:checked ~ .checkmark {
		background-color: var(--colors-body-1, #efece0);
	}
}

.checkmark {
	display: flex;
	width: 18px;
	height: 18px;
	border-radius: 4px;
	transition: background-color 0.2s ease-out;
	justify-content: center;
	align-items: center;
	gap: 10px;
	border: 1px solid var(--colors-body-2, #9f9d98);
	border-radius: 4px;
}

@media screen and (max-width: 700px) {
	.checkbox {
		margin-top: var(--s-2);
		gap: 16px;
	}

	.checkmark {
		width: 32px;
		height: 32px;
	}
}

